--- a/public/html/index.html
+++ b/public/html/index.html
@@ -9,7 +9,7 @@
 		<script src="/js/main.js"></script>
 	</head>
 	<body ng-app="storyApp">
-		<h1>Outline Builder</h1>
+		<h1 class="title">Outline Builder</h1>
 		<div class="template" ng-view>
 		</div>
 	</body>
