--- a/public/html/login.html
+++ b/public/html/login.html
@@ -1,12 +1,26 @@
-<form method="POST" action="/auth/login">
-	<input name="username" type="text" placeholder="Username...">
-	<input name="password" type="password" placeholder="Password...">
-	<input type="submit" value="Log In">
-</form>
 
-<form method="POST" action="/auth/signup">
-	<input name="username" type="text" placeholder="Username...">
-	<input name="password" type="password" placeholder="Password...">
-	<input name="email" type="text" placeholder="Email...">
-	<input type="submit" value="Sign Up">
-</form>
+<div class="tabs">
+	<div ng-class="{'dark-bg':!signup}" ng-click="toggleForm(1)" class="tab light-bg">Log In</div>
+	<div ng-class="{'dark-bg':signup}" ng-click="toggleForm(0)" class="tab light-bg">Sign Up</div>
+</div>
+
+<!-- sign up form -->
+
+<div ng-show="signup" class="box form-box dark-bg">
+	<form class="home-form" method="POST" action="auth/signup">
+		<input type="text" name="username" placeholder="Username...">
+		<input type="text" name="email" placeholder="E-mail address...">
+		<input type="password" name="password" placeholder="Password...">
+		<input class="button light-bg" type="submit" value="sign up">
+	</form>
+</div>
+
+	<!-- login form -->
+
+<div ng-show="!signup" class="box form-box dark-bg">
+	<form class="home-form" method="POST" action="/auth/login">
+		<input type="text" name="username" placeholder="Username...">
+		<input type="password" name="password" placeholder="Password...">
+		<input class="button light-bg" type="submit" value="log in">
+	</form>
+</div>
