--- a/public/html/index.html
+++ b/public/html/index.html
@@ -4,12 +4,18 @@
 		<title>Outline Builder</title>
 		<meta charset="utf-8">
 		<link href="/css/styles.css" rel="stylesheet" type="text/css">
-		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.min.js"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.7/angular-route.min.js"></script>
+		<script src="/js/angular-min.js"></script>
+		<script src="/js/angular-route.min.js"></script>
+		<script src="/js/ui-bootstrap.min.js"></script>
 		<script src="/js/main.js"></script>
 	</head>
 	<body ng-app="storyApp">
-		<h1 class="title">Outline Builder</h1>
+		<div class="title">
+			<h1>Outline Builder</h1>
+			<form action="/auth/logout" method="GET">
+				<input class="button" type="submit" value="log out">
+			</form>
+		</div>
 		<div class="template" ng-view>
 		</div>
 	</body>
