--- a/public/html/index.html
+++ b/public/html/index.html
@@ -10,7 +10,7 @@
 		<script src="/js/main.js"></script>
 	</head>
 	<body ng-app="storyApp">
-		<div class="title">
+		<div class="title center">
 			<h1>Outline Builder</h1>
 			<form action="/auth/logout" method="GET">
 				<input class="button" type="submit" value="log out">
